--- a/estilos.css
+++ b/estilos.css
@@ -2,16 +2,17 @@
 /* CSS Document */
 
 .swipe {
-  overflow: hidden;
-  visibility: hidden;
-  position: relative;
+	overflow: visible;
+	visibility: visible;
+	position: relative;
 }
 .swipe-wrap {
   overflow: hidden;
   position: relative;
 }
 .swipe-wrap > div {
-  float:left;
-  width:100%;
-  position: relative;
+	float: left;
+	position: relative;
+	visibility: hidden;
+	width: inherit;
 }
