--- a/estilos.css
+++ b/estilos.css
@@ -1,18 +1,32 @@
 @charset "utf-8";
 /* CSS Document */
 
+/* Swipe 2 required styles */
+
 .swipe {
-	overflow: visible;
-	visibility: visible;
-	position: relative;
+  overflow: hidden;
+  /*visibility: hidden;*/
 }
 .swipe-wrap {
   overflow: hidden;
   position: relative;
 }
-.swipe-wrap > div {
-	float: left;
-	position: relative;
-	visibility: hidden;
-	width: inherit;
+.swipe-wrap div {
+  float:left;
+  width:100%;
+  position: relative;
+}
+
+/* END required styles */
+
+#slider {
+  /*background:#414141;*/
+}
+.swipe-wrap > div > img {
+	/*
+  display:block;
+  margin:15px 14px 16px;
+  padding:100px 10px;
+  border-radius:3px;
+  */
 }
